okay. so I found a bug that has to do with joins() in Spark and IoRegistry.... I thought this whole time it was from me -- but then I realized that I added a .out() to the test. I reverted to an older version of the branch and added a  .out(). failed. GryoRegistrator is being used as the Kryo source, not IoAwareKryoSerializer. It happens in the shuffle 'threads' and skipts anything regarding KryoServiceLoader. I am so brain fried --- hopefully I realize the solution. For now, everything else is really good.